--- a/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/Base.lproj/Main.storyboard
@@ -1,24 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="window_shopper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperBG" translatesAutoresizingMaskIntoConstraints="NO" id="nGW-Y5-A2t">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperIcon" translatesAutoresizingMaskIntoConstraints="NO" id="jRI-QZ-dci">
+                                <rect key="frame" x="157" y="55" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="4EU-fo-sPh"/>
+                                    <constraint firstAttribute="width" constant="60" id="Lca-ix-LZq"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J42-Q8-aZM" customClass="CurrencyTextField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="150" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="XRf-LR-9gs"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rNF-ee-sT4" customClass="CurrencyTextField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="215" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="KW1-5v-Yfw"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIa-tD-y5y">
+                                <rect key="frame" x="19.5" y="300" width="335" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7v-eL-8Sw">
+                                <rect key="frame" x="139" y="365" width="97" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="N5l-gz-44u"/>
+                                    <constraint firstAttribute="height" constant="21" id="f1Z-Un-jeW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69v-dG-WwE">
+                                <rect key="frame" x="20" y="617" width="335" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="if4-nR-od2"/>
+                                </constraints>
+                                <state key="normal" title="Clear">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearCalcP:" destination="BYZ-38-t0r" eventType="touchUpInside" id="D54-qT-Vkr"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rIa-tD-y5y" firstAttribute="width" secondItem="rNF-ee-sT4" secondAttribute="width" id="0BM-br-Pra"/>
+                            <constraint firstItem="rIa-tD-y5y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3cc-p2-gLt"/>
+                            <constraint firstItem="nGW-Y5-A2t" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8EJ-f1-ryR"/>
+                            <constraint firstItem="rNF-ee-sT4" firstAttribute="height" secondItem="J42-Q8-aZM" secondAttribute="height" id="D08-9K-x1t"/>
+                            <constraint firstItem="J42-Q8-aZM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="E6Y-6N-HKu"/>
+                            <constraint firstItem="jRI-QZ-dci" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EH2-HL-XLK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="69v-dG-WwE" secondAttribute="bottom" constant="20" id="Eoh-k9-MBf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="69v-dG-WwE" secondAttribute="trailing" constant="20" id="FVs-IW-Q0a"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J42-Q8-aZM" secondAttribute="trailing" constant="20" id="Nj9-7r-gAD"/>
+                            <constraint firstItem="p7v-eL-8Sw" firstAttribute="top" secondItem="rIa-tD-y5y" secondAttribute="bottom" constant="5" id="OCF-bw-uNj"/>
+                            <constraint firstItem="69v-dG-WwE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Qwz-hg-jRW"/>
+                            <constraint firstItem="jRI-QZ-dci" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="a5X-4m-HH0"/>
+                            <constraint firstItem="nGW-Y5-A2t" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eK4-9R-7p6"/>
+                            <constraint firstItem="rIa-tD-y5y" firstAttribute="top" secondItem="rNF-ee-sT4" secondAttribute="bottom" constant="45" id="gtE-hb-jV7"/>
+                            <constraint firstItem="rNF-ee-sT4" firstAttribute="trailing" secondItem="J42-Q8-aZM" secondAttribute="trailing" id="inq-76-pa6"/>
+                            <constraint firstItem="nGW-Y5-A2t" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kga-Ld-fI7"/>
+                            <constraint firstItem="nGW-Y5-A2t" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lCB-uY-SEl"/>
+                            <constraint firstItem="J42-Q8-aZM" firstAttribute="top" secondItem="jRI-QZ-dci" secondAttribute="bottom" constant="35" id="psN-vU-UYn"/>
+                            <constraint firstItem="rNF-ee-sT4" firstAttribute="leading" secondItem="J42-Q8-aZM" secondAttribute="leading" id="sN2-c8-x36"/>
+                            <constraint firstItem="rNF-ee-sT4" firstAttribute="top" secondItem="J42-Q8-aZM" secondAttribute="bottom" constant="25" id="uxN-yj-z1d"/>
+                            <constraint firstItem="p7v-eL-8Sw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zZh-yu-i7E"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="hoursLbl" destination="p7v-eL-8Sw" id="HaM-HB-zrX"/>
+                        <outlet property="priceTxt" destination="rNF-ee-sT4" id="3YY-Pn-7SM"/>
+                        <outlet property="resultLbl" destination="rIa-tD-y5y" id="hcW-ZU-TQy"/>
+                        <outlet property="wageTxt" destination="J42-Q8-aZM" id="iZh-IG-PEp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="windowShopperBG" width="414" height="736"/>
+        <image name="windowShopperIcon" width="115" height="115"/>
+    </resources>
 </document>
