--- a/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/Base.lproj/Main.storyboard
@@ -56,7 +56,9 @@
                                 <rect key="frame" x="139" y="365" width="97" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="N5l-gz-44u"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="dmM-5x-mSc"/>
                                     <constraint firstAttribute="height" constant="21" id="f1Z-Un-jeW"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="97" id="f7G-Pz-TaR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
